feat: finished filters functionality